package trafficlight;

public enum LightColor {
	GREEN,
	RED,
	ORANGE
};

